kubernetes/ingresses/test-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-front
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
